# ab-macros

./: .env  .gitignore  Cargo.toml  README.md  build.sh  flake.nix  flake.nix.new  index.html  project_setup.sh  project_spec.txt
ab-macros/backend/: Cargo.toml
ab-macros/backend/src/: config.rs  lib.rs  main.rs  server.rs
ab-macros/backend/src/api/: handlers.rs  mod.rs  routes.rs
ab-macros/backend/src/auth/: middleware.rs  mod.rs  twilio.rs
ab-macros/backend/src/db/: mod.rs  sled.rs
ab-macros/shared/: Cargo.toml
ab-macros/shared/src/: dto.rs  lib.rs  models.rs  validation.rs
backend/: Cargo.toml
backend/src/: main.rs
backend/src/auth_middleware/: middleware.rs  mod.rs
backend/src/models/: mod.rs  session.rs
backend/user-sessions/: db
frontend/: Cargo.toml  index.html
frontend/src/: api.rs  app.rs  app.rs.bak  lib.rs  lib.rs.bak  main.rs  styles.rs
frontend/src/components/: auth_guard.rs  food_item_card.rs  header.rs  layout.rs  mod.rs
frontend/src/models/: mod.rs
frontend/src/pages/: home.rs  login.rs  meal_entry.rs  meal_list.rs  mod.rs  not_found.rs  nutrient_report.rs  profile.rs
frontend/src/store/: auth.rs
frontend/src/utils/: storage.rs
frontend/static/: index.html  main.css  manifest.json
src/: api.rs  auth.rs  db.rs  main.rs  models.rs
src/components/: add_meal.rs  dashboard.rs  header.rs  history.rs  progress.rs
static/: ab_macros_frontend.d.ts  ab_macros_frontend.js  ab_macros_frontend_bg.wasm.d.ts  index.html  package.json  service-worker.js
