[package]
name = "ab-macros"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "An animal-based diet macro tracking PWA"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Backend
actix-web = "4.3"
actix-files = "0.6"
actix-cors = "0.6"
actix-embed = "0.1"
sled = "0.34"
dotenv = "0.15"
env_logger = "0.10"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["v4", "serde"] }
jsonwebtoken = "8.3"
rand = "0.8"
rust-embed = "6.6"
futures = "0.3"
include_dir = "0.7"
mime_guess = "2.0"
base64 = "0.21"
twilio = "1.0"
reqwest = { version = "0.11", features = ["json"] }

[workspace]
members = [
    "frontend"
]

[profile.release]
lto = true
opt-level = 'z'  # Optimize for size
codegen-units = 1

# Build script to include frontend in the backend binary
[build-dependencies]
copy_dir = "0.1"

# Enable the following custom macro for embedding assets
[features]
embed_frontend = []
