[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.3"
actix-files = "0.6"
actix-session = { version = "0.7", features = ["cookie-session"] }
actix-cors = "0.6"
reqwest = { version = "0.11", features = ["json"] }
sled = "0.34"
uuid = { version = "1.3", features = ["v4", "serde"] }
chrono = "0.4"
futures = "0.3"
dotenv = "0.15"
env_logger = "0.10"
log = "0.4"
thiserror = "1.0"
