[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.3", features = ["rustls", "macros"] }
actix-files = "0.6"
actix-session = { version = "0.7", features = ["cookie-session"] }
actix-cors = "0.6"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
sled = "0.34"
uuid = { version = "1.3", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
dotenv = "0.15"
env_logger = "0.10"
log = "0.4"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust-embed = "6.8.1"
mime_guess = "2.0"
bincode = "2.0.1"
actix-service = "2.0.3"
futures-util = "0.3.31"
