[package]
name = "ab-macros-frontend"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Frontend for animal-based diet macro tracking PWA"

[dependencies]
yew = { version = "0.20", features = ["csr"] }
yew-router = "0.17"
gloo = "0.8"
gloo-net = "0.2"
web-sys = { version = "0.3", features = [
    "HtmlInputElement",
    "HtmlSelectElement",
    "Storage",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "DomRect",
    "Performance",
    "Navigator",
    "ServiceWorkerRegistration",
    "ServiceWorkerContainer",
    "ServiceWorker",
    "console",
    "HtmlHeadElement",
    "DomTokenList",
]}
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
uuid = { version = "1.3", features = ["v4", "serde", "js"] }
getrandom = { version = "0.2", features = ["js"] }
log = "0.4"
wasm-logger = "0.2"
stylist = { version = "0.12", features = ["yew"] }
