[package]
name = "ab-macros-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Internal dependencies
ab-macros-shared = { path = "../shared" }

# Web server
actix-web = "4.3"
actix-cors = "0.6"
actix-files = "0.6"
actix-rt = "2.8"

# Authentication
jsonwebtoken = "8.3"
twilio = "1"
rand = "0.8"

# Database
sled = "0.34"
bincode = "1.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Configuration
config = "0.13"
dotenv = "0.15"

# Utils
uuid = { version = "1.3", features = ["v4", "serde"] }
futures = "0.3"
tokio = { version = "1.28", features = ["full"] }
async-trait = "0.1"
validator = { version = "0.16", features = ["derive"] }
